# emgui

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
example/static/: index.html
include/: gles_device.hpp  window_manager.hpp
src/: gles_device.cpp  window_manager.cpp
